add second time for airbnb for computeur

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 
 <nav>
   <ul>
-    
+    <li>Récommandé</li>
+    <li>Logements</li>
+    <li>Expériences</li>
+    <li>Lieux</li>
   </ul>
 </nav>
   </body>
