Add image for first section destination to Airbnb

--- a/index.html
+++ b/index.html
@@ -64,6 +64,113 @@
 
 <section>
   <h2>Réservées à l'instant</h2>
+  <figure>
+    <img src="image/figure1.jpg" alt="choix de destination">
+     <figcaption>73€ Take a crush course in artisan wallpaper-making
+    <img src="image/prix.png" alt="prix du voyage"></figcaption>
+  </figure>
+  <figure>
+    <img src="image/figure2.jpg" alt="choix de destination">
+     <figcaption>29€ Let's Photography together
+     <img src="image/prix3.png" alt="prix du voyage"></figcaption>
+  </figure>
+  <figure>
+    <img src="image/figure3.jpg" alt="choix de destination">
+    <figcaption>57€ Get a taste of an authantic tapas
+    <img src="image/prix2.png" alt="prix du séjour"></figcaption>
+  </figure>
+  <figure>
+    <img src="image/figure4.jpg" alt="choix de destination">
+    <figcaption>91€ Feel-good vibes intimate setting
+    <img src="image/prix4.png" alt=""></figcaption>
+  </figure>
 </section>
+
+<section>
+  <h2>Expériences</h2>
+  <figure>
+  <img src="image/figure5.jpg" alt="choix de destination">
+   <figcaption>73€ Take a crush course in artisan wallpaper-making
+   </figure>
+   <figure>
+  <img src="image/prix.png" alt="prix du voyage"></figcaption>
+</figure>
+<figure>
+  <img src="image/figure6.jpg" alt="choix de destination">
+   <figcaption>29€ Let's Photography together
+   <img src="image/prix3.png" alt="prix du voyage"></figcaption>
+</figure>
+<figure>
+  <img src="image/figure7.jpg" alt="choix de destination">
+  <figcaption>57€ Get a taste of an authantic tapas
+  <img src="image/prix2.png" alt="prix du séjour"></figcaption>
+</figure>
+<figure>
+  <img src="image/figure8.jpg" alt="choix de destination">
+  <figcaption>91€ Feel-good vibes intimate setting
+  <img src="image/prix4.png" alt=""></figcaption>
+</figure>
+</section>
+
+
+<section>
+  <h2>Divertissements</h2>
+  <figure>
+  <img src="image/figure9.jpg" alt="choix de destination">
+   <figcaption>73€ Take a crush course in artisan wallpaper-making
+   </figure>
+   <figure>
+  <img src="image/prix.png" alt="prix du voyage"></figcaption>
+</figure>
+<figure>
+  <img src="image/figure10.jpg" alt="choix de destination">
+   <figcaption>29€ Let's Photography together
+   <img src="image/prix3.png" alt="prix du voyage"></figcaption>
+</figure>
+<figure>
+  <img src="image/figure11LA.jpg" alt="choix de destination">
+  <figcaption>57€ Get a taste of an authantic tapas
+  <img src="image/prix2.png" alt="prix du séjour"></figcaption>
+</figure>
+<figure>
+  <img src="image/figure13PRS.jpg" alt="choix de destination">
+  </figure>
+</section>
+
+<section>
+  <h2>Destinations à la une</h2>
+<figure>
+<img src="image/figure14FRZ.jpg" alt="choix de destination">
+ <figcaption>73€ Take a crush course in artisan wallpaper-making
+ </figure>
+ <figure>
+<img src="image/prix.png" alt="prix du voyage"></figcaption>
+</figure>
+<figure>
+<img src="image/figure15SF.jpg" alt="choix de destination">
+ <figcaption>29€ Let's Photography together
+ <img src="image/prix3.png" alt="prix du voyage"></figcaption>
+</figure>
+<figure>
+<img src="image/figure16LON.jpg" alt="choix de destination">
+<figcaption>57€ Get a taste of an authantic tapas
+<img src="image/prix2.png" alt="prix du séjour"></figcaption>
+</figure>
+<figure>
+<img src="image/figure13PRS.jpg" alt="choix de destination">
+<figcaption>91€ Feel-good vibes intimate setting
+<img src="image/prix4.png" alt=""></figcaption>
+</figure>
+</section>
+
+<section>
+  <h2>Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
+ <form>
+<p>Complétez vos revenus en accueillant des voyageurs.</p>
+<button type="button" name="Estimer mes revenus">Estimer mes revenus</button>
+</form>
+</section>
+
+
   </body>
 </html>
