Add footer for Airbnb. Add input and differents section for the website

--- a/index.html
+++ b/index.html
@@ -169,8 +169,84 @@
 <p>Complétez vos revenus en accueillant des voyageurs.</p>
 <button type="button" name="Estimer mes revenus">Estimer mes revenus</button>
 </form>
+<figure>
+  <img src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
+</figure>
 </section>
 
+<footer>
+  <form>
+
+       <select name="pays" id="pays">
+
+           <option value="france">France</option>
+
+           <option value="espagne">Espagne</option>
+
+           <option value="italie">Italie</option>
+
+           <option value="royaume-uni">Royaume-Uni</option>
+
+           <option value="canada">Canada</option>
+
+           <option value="etats-unis">États-Unis</option>
+
+           <option value="chine">Chine</option>
+
+           <option value="japon">Japon</option>
+
+
+        </select>
+
+        <select name="devise" id="devise">
+
+            <option value="EUR">EUR</option>
+
+            <option value="GBP">GBP</option>
+
+            <option value="ARS">ARS</option>
+
+            <option value="BOB">BOB</option>
+
+            <option value="BRL">BRL</option>
+
+            <option value="USD">USD</option>
+
+            <option value="GYD">GYD</option>
+
+            <option value="PEN">PEN</option>
+
+      </select>
+
+<section>
+  <h2>Airbnb</h2>
+  <p>A propos</p>
+  <p>Carrières</p>
+  <p>Presse</p>
+  <p>règles</p>
+  <p>Aides</p>
+  <p>Diversité et intégration</p>
+</section>
+
+<section>
+  <h2>Découvrir</h2>
+  <p>Confience et sécurité</p>
+  <p>Crédit voyage</p>
+  <p>Airbnb Citizen</p>
+  <p>Voyage d'affaires</p>
+  <p>Guides</p>
+</section>
+
+<section>
+  <h2>Hébergement</h2>
+  <p>Pourquoi être hôte</p>
+  <p>Hospitalité</p>
+  <p>Hébergement responsable</p>
+</section>
+
+</form>
+
+</footer>
 
   </body>
 </html>
