Finish to add all footer airbnb

--- a/index.html
+++ b/index.html
@@ -1,183 +1,200 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <link rel="icon" type="image/png" href="image/airbnb_desk.ico" />
     <meta charset="utf-8">
     <title>Locations de vacance, logements, expérience et lieux-Airbnb</title>
-  </head>
-  <body>
-<header>
-  <nav>
-    <figure>
-      <img src="image/airbnb_desk.ico" alt="Logo principale">
-    </figure>
-       <ul>
-        <li>Denevez hôte</li>
-        <li>Aide</li>
-        <li>Inscription</li>
-        <li>Connexion</li>
-      </ul>
-  </nav>
-    <h1>Où souhaitez-vous aller ? Votre prochaine aventure commence sur Airbnb.</h1>
-</header>
+</head>
 
-<nav>
-  <form>
-<label for="où">Où</label> </br>
-<input type="text" name="Partout" placeholder="Partout">
-<label for="Quand">Quand</label>
-<input type="text" name="Quand"  placeholder="Quand">
-<label for="Voyageur">Voyageur</label>
-<select name="vaoyageur" id="voyageur">
-  <optgroup label="Adulte">
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
- </optgroup>
-<optgroup label="Enfant">
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-</optgroup>
-<optgroup label="bébé">
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-</optgroup>
+<body>
+    <header>
+        <nav>
+            <figure>
+                <img src="image/airbnb_desk.ico" alt="Logo principale">
+            </figure>
+            <ul>
+                <li>Devenez hôte</li>
+                <li>Aide</li>
+                <li>Inscription</li>
+                <li>Connexion</li>
+            </ul>
+        </nav>
+        <h1>Où souhaitez-vous aller ? Votre prochaine aventure commence sur Airbnb.</h1>
+    </header>
+
+    <nav>
+        <form>
+            <label for="où">Où</label>
+            <input type="text" id="où" name="Partout" placeholder="Partout">
+            <label for="Quand">Quand</label>
+            <input type="text" id="Quand" name="Quand" placeholder="Quand">
+            <label for="Voyageur">Voyageur</label>
+            <select name="voyageur" id="Voyageur">
+          <optgroup label="Adulte">
+             <option value="1">1</option>
+             <option value="2">2</option>
+             <option value="3">3</option>
+             <option value="4">4</option>
+          </optgroup>
+
+
+          <optgroup label="Enfant">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </optgroup>
+
+
+        <optgroup label="bébé">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </optgroup>
+
 </select>
-  </form>
-  <button type="button" name="Recehcher">Rechercher</button>
-</nav>
+        </form>
+        <button type="button" name="Recehcher">Rechercher</button>
+    </nav>
 
 
-<nav>
-  <ul>
-    <li>Récommandé</li>
-    <li>Logements</li>
-    <li>Expériences</li>
-    <li>Lieux</li>
-  </ul>
-</nav>
+    <nav>
+        <ul>
+            <li>Récommandé</li>
+            <li>Logements</li>
+            <li>Expériences</li>
+            <li>Lieux</li>
+        </ul>
+    </nav>
 
-<section>
-  <h2>Réservées à l'instant</h2>
-  <figure>
-    <img src="image/figure1.jpg" alt="choix de destination">
-     <figcaption>73€ Take a crush course in artisan wallpaper-making
-    <img src="image/prix.png" alt="prix du voyage"></figcaption>
-  </figure>
-  <figure>
-    <img src="image/figure2.jpg" alt="choix de destination">
-     <figcaption>29€ Let's Photography together
-     <img src="image/prix3.png" alt="prix du voyage"></figcaption>
-  </figure>
-  <figure>
-    <img src="image/figure3.jpg" alt="choix de destination">
-    <figcaption>57€ Get a taste of an authantic tapas
-    <img src="image/prix2.png" alt="prix du séjour"></figcaption>
-  </figure>
-  <figure>
-    <img src="image/figure4.jpg" alt="choix de destination">
-    <figcaption>91€ Feel-good vibes intimate setting
-    <img src="image/prix4.png" alt=""></figcaption>
-  </figure>
-</section>
-
-<section>
-  <h2>Expériences</h2>
-  <figure>
-  <img src="image/figure5.jpg" alt="choix de destination">
-   <figcaption>73€ Take a crush course in artisan wallpaper-making
-   </figure>
-   <figure>
-  <img src="image/prix.png" alt="prix du voyage"></figcaption>
-</figure>
-<figure>
-  <img src="image/figure6.jpg" alt="choix de destination">
-   <figcaption>29€ Let's Photography together
-   <img src="image/prix3.png" alt="prix du voyage"></figcaption>
-</figure>
-<figure>
-  <img src="image/figure7.jpg" alt="choix de destination">
-  <figcaption>57€ Get a taste of an authantic tapas
-  <img src="image/prix2.png" alt="prix du séjour"></figcaption>
-</figure>
-<figure>
-  <img src="image/figure8.jpg" alt="choix de destination">
-  <figcaption>91€ Feel-good vibes intimate setting
-  <img src="image/prix4.png" alt=""></figcaption>
-</figure>
-</section>
+    <section>
+        <h2>Réservées à l'instant</h2>
+        <figure>
+            <img src="image/figure1.jpg" alt="choix de destination">
+            <figcaption>73€ Take a crush course in artisan wallpaper-making
+                <img src="image/prix.png" alt="prix du voyage"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure2.jpg" alt="choix de destination">
+            <figcaption>29€ Let's Photography together
+                <img src="image/prix3.png" alt="prix du voyage"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure3.jpg" alt="choix de destination">
+            <figcaption>57€ Get a taste of an authantic tapas
+                <img src="image/prix2.png" alt="prix du séjour"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure4.jpg" alt="choix de destination">
+            <figcaption>91€ Feel-good vibes intimate setting
+                <img src="image/prix4.png" alt=""></figcaption>
+        </figure>
+    </section>
 
 
-<section>
-  <h2>Divertissements</h2>
-  <figure>
-  <img src="image/figure9.jpg" alt="choix de destination">
-   <figcaption>73€ Take a crush course in artisan wallpaper-making
-   </figure>
-   <figure>
-  <img src="image/prix.png" alt="prix du voyage"></figcaption>
-</figure>
-<figure>
-  <img src="image/figure10.jpg" alt="choix de destination">
-   <figcaption>29€ Let's Photography together
-   <img src="image/prix3.png" alt="prix du voyage"></figcaption>
-</figure>
-<figure>
-  <img src="image/figure11LA.jpg" alt="choix de destination">
-  <figcaption>57€ Get a taste of an authantic tapas
-  <img src="image/prix2.png" alt="prix du séjour"></figcaption>
-</figure>
-<figure>
-  <img src="image/figure13PRS.jpg" alt="choix de destination">
-  </figure>
-</section>
 
-<section>
-  <h2>Destinations à la une</h2>
-<figure>
-<img src="image/figure14FRZ.jpg" alt="choix de destination">
- <figcaption>73€ Take a crush course in artisan wallpaper-making
- </figure>
- <figure>
-<img src="image/prix.png" alt="prix du voyage"></figcaption>
-</figure>
-<figure>
-<img src="image/figure15SF.jpg" alt="choix de destination">
- <figcaption>29€ Let's Photography together
- <img src="image/prix3.png" alt="prix du voyage"></figcaption>
-</figure>
-<figure>
-<img src="image/figure16LON.jpg" alt="choix de destination">
-<figcaption>57€ Get a taste of an authantic tapas
-<img src="image/prix2.png" alt="prix du séjour"></figcaption>
-</figure>
-<figure>
-<img src="image/figure13PRS.jpg" alt="choix de destination">
-<figcaption>91€ Feel-good vibes intimate setting
-<img src="image/prix4.png" alt=""></figcaption>
-</figure>
-</section>
 
-<section>
-  <h2>Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
- <form>
-<p>Complétez vos revenus en accueillant des voyageurs.</p>
-<button type="button" name="Estimer mes revenus">Estimer mes revenus</button>
-</form>
-<figure>
-  <img src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
-</figure>
-</section>
+    <section>
+        <h2>Expériences</h2>
+        <figure>
+            <img src="image/figure5.jpg" alt="choix de destination">
+            <figcaption>73€ Take a crush course in artisan wallpaper-making
+              <img src="image/prix.png" alt="prix du voyage"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure6.jpg" alt="choix de destination">
+            <figcaption>29€ Let's Photography together
+                <img src="image/prix3.png" alt="prix du voyage"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure7.jpg" alt="choix de destination">
+            <figcaption>57€ Get a taste of an authantic tapas
+                <img src="image/prix2.png" alt="prix du séjour"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure8.jpg" alt="choix de destination">
+            <figcaption>91€ Feel-good vibes intimate setting
+                <img src="image/prix4.png" alt=""></figcaption>
+        </figure>
+    </section>
 
-<footer>
-  <form>
 
-       <select name="pays" id="pays">
+
+
+    <section>
+        <h2>Divertissements</h2>
+        <figure>
+            <img src="image/figure9.jpg" alt="choix de destination">
+            <figcaption>73€ Take a crush course in artisan wallpaper-making
+              <img src="image/prix.png" alt="prix du voyage"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure10.jpg" alt="choix de destination">
+            <figcaption>29€ Let's Photography together
+                <img src="image/prix3.png" alt="prix du voyage"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure11LA.jpg" alt="choix de destination">
+            <figcaption>57€ Get a taste of an authantic tapas
+                <img src="image/prix2.png" alt="prix du séjour"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure13PRS.jpg" alt="choix de destination">
+        </figure>
+    </section>
+
+
+
+
+    <section>
+        <h2>Destinations à la une</h2>
+        <figure>
+            <img src="image/figure14FRZ.jpg" alt="choix de destination">
+            <figcaption>73€ Take a crush course in artisan wallpaper-making
+              <img src="image/prix.png" alt="prix du voyage"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure15SF.jpg" alt="choix de destination">
+            <figcaption>29€ Let's Photography together
+                <img src="image/prix3.png" alt="prix du voyage"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure16LON.jpg" alt="choix de destination">
+            <figcaption>57€ Get a taste of an authantic tapas
+                <img src="image/prix2.png" alt="prix du séjour"></figcaption>
+        </figure>
+        <figure>
+            <img src="image/figure13PRS.jpg" alt="choix de destination">
+            <figcaption>91€ Feel-good vibes intimate setting
+                <img src="image/prix4.png" alt=""></figcaption>
+        </figure>
+    </section>
+
+
+
+
+    <section>
+        <h2>Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
+        <form>
+            <p>Complétez vos revenus en accueillant des voyageurs.</p>
+            <button type="button" name="Estimer mes revenus">Estimer mes revenus</button>
+        </form>
+        <figure>
+            <img src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
+        </figure>
+    </section>
+
+
+
+
+    <footer>
+
+
+        <form>
+
+            <select name="pays" id="pays">
 
            <option value="france">France</option>
 
@@ -198,7 +215,7 @@
 
         </select>
 
-        <select name="devise" id="devise">
+            <select name="devise" id="devise">
 
             <option value="EUR">EUR</option>
 
@@ -218,35 +235,51 @@
 
       </select>
 
-<section>
-  <h2>Airbnb</h2>
-  <p>A propos</p>
-  <p>Carrières</p>
-  <p>Presse</p>
-  <p>règles</p>
-  <p>Aides</p>
-  <p>Diversité et intégration</p>
-</section>
 
-<section>
-  <h2>Découvrir</h2>
-  <p>Confience et sécurité</p>
-  <p>Crédit voyage</p>
-  <p>Airbnb Citizen</p>
-  <p>Voyage d'affaires</p>
-  <p>Guides</p>
-</section>
+            <section>
+                <h2>Airbnb</h2>
+                <p>A propos</p>
+                <p>Carrières</p>
+                <p>Presse</p>
+                <p>règles</p>
+                <p>Aides</p>
+                <p>Diversité et intégration</p>
+            </section>
 
-<section>
-  <h2>Hébergement</h2>
-  <p>Pourquoi être hôte</p>
-  <p>Hospitalité</p>
-  <p>Hébergement responsable</p>
-</section>
 
-</form>
+            <section>
+                <h2>Découvrir</h2>
+                <p>Confience et sécurité</p>
+                <p>Crédit voyage</p>
+                <p>Airbnb Citizen</p>
+                <p>Voyage d'affaires</p>
+                <p>Guides</p>
+            </section>
 
-</footer>
+            <section>
+                <h2>Hébergement</h2>
+                <p>Pourquoi être hôte</p>
+                <p>Hospitalité</p>
+                <p>Hébergement responsable</p>
+            </section>
 
-  </body>
+        </form>
+
+<figure>
+  <img src="image/footer.png" alt="marque déposée">
+</figure>
+
+<ul>
+  <li>Conditions</li>
+  <li>Politique de confidentialité</li>
+  <li>Plan du site</li>
+</ul>
+
+<figure>
+  <img src="image/réseaux.png" alt="">
+</figure>
+    </footer>
+
+</body>
+
 </html>
