--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="image/airbnb_desk.ico" />
     <meta charset="utf-8">
     <title>Locations de vacance, logements, expérience et lieux-Airbnb</title>
@@ -13,14 +14,14 @@
             <figure>
                 <img src="image/airbnb_desk.ico" alt="Logo principale">
             </figure>
-            <ul>
+            <ul class="navigation">
                 <li>Devenez hôte</li>
                 <li>Aide</li>
                 <li>Inscription</li>
                 <li>Connexion</li>
             </ul>
         </nav>
-        <h1>Où souhaitez-vous aller ? Votre prochaine aventure commence sur Airbnb.</h1>
+        <h1>Où souhaitez-vous aller ?</h1> <p class="sous titre">Votre prochaine aventure commence sur Airbnb.</p>
     </header>
 
     <nav>
