--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <figure>
-                <img src="image/airbnb_desk.ico" alt="Logo principale">
+                <img class="logo"src="image/airbnb_desk.ico" alt="Logo principale">
             </figure>
             <ul class="navigation">
                 <li>Devenez hôte</li>
