AddClass for first div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <figure>
+            <figure class="contenantlelogo">
                 <img class="logo"src="image/airbnb_desk.ico" alt="Logo principale">
             </figure>
             <ul class="navigation">
@@ -21,7 +21,10 @@
                 <li>Connexion</li>
             </ul>
         </nav>
+        <div class="titre">
+
         <h1>Où souhaitez-vous aller ?</h1> <p class="sous titre">Votre prochaine aventure commence sur Airbnb.</p>
+      </div>
     </header>
 
     <nav>
