Add class for Form, recherche destination

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <nav>
-        <form>
+        <form class="recherchedestination">
             <label for="où">Où</label>
             <input type="text" id="où" name="Partout" placeholder="Partout">
             <label for="Quand">Quand</label>
