Delete calss for img

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
         </figure>
         <figure>
             <img src="image/figure13PRS.jpg" alt="choix de destination">
+            <figcaption>91€ Feel-good vibes intimate setting
+                <img src="image/prix4.png" alt=""></figcaption>
         </figure>
     </section>
 
