Add class for H2 estimer mes revenu and P

--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
 
 
     <section>
-        <h2>Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
         <form>
+          <h2 class="h2estimer">Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
             <p>Complétez vos revenus en accueillant des voyageurs.</p>
             <button type="button" name="Estimer mes revenus">Estimer mes revenus</button>
         </form>
-        <figure>
-            <img src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
+        <figure class="figestimer">
+            <img class="imageestimer"src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
         </figure>
     </section>
 
