Add class for estimer mes revenus

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             </figure>
             <ul class="navigation">
                 <li>Devenez hôte</li>
-                <li>Aide</li>
+                <li>Help</li>
                 <li>Inscription</li>
                 <li>Connexion</li>
             </ul>
         </nav>
         <div class="titre">
 
-        <h1>Où souhaitez-vous aller ?</h1> <p class="sous titre">Votre prochaine aventure commence sur Airbnb.</p>
+        <h1>Où souhaitez-vous aller ?</h1> <p class="soustitre">Votre prochaine aventure commence sur Airbnb.</p>
       </div>
     </header>
 
@@ -34,7 +34,7 @@
             <label for="Quand">Quand</label>
             <input type="text" id="Quand" name="Quand" placeholder="Quand">
             <label for="Voyageur">Voyageur</label>
-            <select name="voyageur" id="Voyageur">
+            <select class="voyageur "name="voyageur" id="Voyageur">
           <optgroup label="Adulte">
              <option value="1">1</option>
              <option value="2">2</option>
@@ -185,7 +185,7 @@
         <form>
           <h2 class="h2estimer">Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
             <p>Complétez vos revenus en accueillant des voyageurs.</p>
-            <button type="button" name="Estimer mes revenus">Estimer mes revenus</button>
+            <button class="bouttonestimer" type="button" name="Estimer mes revenus">Estimer mes revenus</button>
         </form>
         <figure class="figestimer">
             <img class="imageestimer"src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
@@ -198,7 +198,7 @@
     <footer>
 
 
-        <form>
+        <form class="devise">
 
             <select name="pays" id="pays">
 
@@ -242,7 +242,7 @@
       </select>
 
 
-            <section>
+            <section class="airbnb">
                 <h2>Airbnb</h2>
                 <p>A propos</p>
                 <p>Carrières</p>
@@ -253,7 +253,7 @@
             </section>
 
 
-            <section>
+            <section class="decouvrir">
                 <h2>Découvrir</h2>
                 <p>Confience et sécurité</p>
                 <p>Crédit voyage</p>
@@ -262,7 +262,7 @@
                 <p>Guides</p>
             </section>
 
-            <section>
+            <section class="hebergement">
                 <h2>Hébergement</h2>
                 <p>Pourquoi être hôte</p>
                 <p>Hospitalité</p>
@@ -272,17 +272,17 @@
         </form>
 
 <figure>
-  <img src="image/footer.png" alt="marque déposée">
+  <img class="marque"src="image/footer.png" alt="marque déposée">
 </figure>
 
-<ul>
+<ul class="politique">
   <li>Conditions</li>
   <li>Politique de confidentialité</li>
   <li>Plan du site</li>
 </ul>
 
 <figure>
-  <img src="image/réseaux.png" alt="">
+  <img class="reseaux"src="image/réseaux.png" alt="">
 </figure>
     </footer>
 
