Add logo for tablette

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav>
             <figure class="contenantlelogo">
                 <img class="logo"src="image/airbnb_desk.ico" alt="Logo principale">
+                <img class="logotablette"src="image/Airbnb_tablette.png" alt="logo pour tablette">
             </figure>
             <ul class="navigation">
                 <li>Devenez hôte</li>
