Add class for destionation a la une

--- a/index.html
+++ b/index.html
@@ -157,24 +157,24 @@
 
     <section>
         <h2>Destinations à la une</h2>
-        <figure>
+        <figure class="florence">
             <img src="image/figure14FRZ.jpg" alt="choix de destination">
             <figcaption>73€ Take a crush course in artisan wallpaper-making
               <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
-        <figure>
+        <figure class="sanfrancisco">
             <img src="image/figure15SF.jpg" alt="choix de destination">
             <figcaption>29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure16LON.jpg" alt="choix de destination">
-            <figcaption>57€ Get a taste of an authantic tapas
+            <img class="destination"src="image/figure16LON.jpg" alt="choix de destination">
+            <figcaption class="destination">57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure13PRS.jpg" alt="choix de destination">
-            <figcaption>91€ Feel-good vibes intimate setting
+            <img class="destination"src="image/figure13PRS.jpg" alt="choix de destination">
+            <figcaption class="destination">91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
     </section>
