Add class imgphone for all img in mobile

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <figure class="contenantlelogo">
                 <img class="logo"src="image/airbnb_desk.ico" alt="Logo principale">
                 <img class="logotablette"src="image/Airbnb_tablette.png" alt="logo pour tablette">
+                <img class="logophone"src="image/Airbnb_phone.png" alt="logo pour smartphones">
             </figure>
             <ul class="navigation">
                 <li>Devenez hôte</li>
@@ -77,23 +78,25 @@
     <section>
         <h2>Réservées à l'instant</h2>
         <figure>
-            <img src="image/figure1.jpg" alt="choix de destination">
+            <img class="img"src="image/figure1.jpg" alt="choix de destination">
+            <img class="imgphone"src="image/figure1.resized.jpg" alt="">
             <figcaption>73€ Take a crush course in artisan wallpaper-making
                 <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure2.jpg" alt="choix de destination">
+            <img class="img"src="image/figure2.jpg" alt="choix de destination">
+            <img class="imgphone"src="image/figure2.resized.jpg" alt="">
             <figcaption>29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure3.jpg" alt="choix de destination">
-            <figcaption>57€ Get a taste of an authantic tapas
+            <img class="img"src="image/figure3.jpg" alt="choix de destination">
+            <figcaption class="img">57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure4.jpg" alt="choix de destination">
-            <figcaption>91€ Feel-good vibes intimate setting
+            <img class="img"src="image/figure4.jpg" alt="choix de destination">
+            <figcaption class="img">91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
     </section>
@@ -104,23 +107,25 @@
     <section>
         <h2>Expériences</h2>
         <figure>
-            <img src="image/figure5.jpg" alt="choix de destination">
+            <img class="img"src="image/figure5.jpg" alt="choix de destination">
+            <img class="imgphone"src="image/figure5.resized.jpg" alt="">
             <figcaption>73€ Take a crush course in artisan wallpaper-making
               <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure6.jpg" alt="choix de destination">
+            <img class="img"src="image/figure6.jpg" alt="choix de destination">
+            <img class="imgphone"src="image/figure6.resized.jpg" alt="">
             <figcaption>29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure7.jpg" alt="choix de destination">
-            <figcaption>57€ Get a taste of an authantic tapas
+            <img class="img"src="image/figure7.jpg" alt="choix de destination">
+            <figcaption class="img">57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure8.jpg" alt="choix de destination">
-            <figcaption>91€ Feel-good vibes intimate setting
+            <img class="img"src="image/figure8.jpg" alt="choix de destination">
+            <figcaption class="img">91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
     </section>
@@ -131,23 +136,25 @@
     <section>
         <h2>Divertissements</h2>
         <figure>
-            <img src="image/figure9.jpg" alt="choix de destination">
+            <img class="img"src="image/figure9.jpg" alt="choix de destination">
+            <img class="imgphone"src="image/figure9.resized.jpg" alt="">
             <figcaption>73€ Take a crush course in artisan wallpaper-making
               <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure10.jpg" alt="choix de destination">
+            <img class="img"src="image/figure10.jpg" alt="choix de destination">
+            <img class="imgphone"src="image/figure10.resized.jpg" alt="">
             <figcaption>29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure11LA.jpg" alt="choix de destination">
-            <figcaption>57€ Get a taste of an authantic tapas
+            <img class="img"src="image/figure11LA.jpg" alt="choix de destination">
+            <figcaption class="img">57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img src="image/figure13PRS.jpg" alt="choix de destination">
-            <figcaption>91€ Feel-good vibes intimate setting
+            <img class="img"src="image/figure13PRS.jpg" alt="choix de destination">
+            <figcaption class="img">91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
     </section>
@@ -158,23 +165,25 @@
     <section>
         <h2>Destinations à la une</h2>
         <figure class="florence">
-            <img src="image/figure14FRZ.jpg" alt="choix de destination">
-            <figcaption>73€ Take a crush course in artisan wallpaper-making
+            <img class="img"src="image/figure14FRZ.jpg" alt="choix de destination">
+            <figcaption class="img"> 73€ Take a crush course in artisan wallpaper-making
               <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure class="sanfrancisco">
-            <img src="image/figure15SF.jpg" alt="choix de destination">
-            <figcaption>29€ Let's Photography together
+            <img class="img"src="image/figure15SF.jpg" alt="choix de destination">
+            <figcaption class="img">29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img class="destination"src="image/figure16LON.jpg" alt="choix de destination">
-            <figcaption class="destination">57€ Get a taste of an authantic tapas
+            <img class="destination"src="image/figure15SF.resized.jpg" alt="choix de destination">
+            <img class="imgphone"src="image/figure15SF.resized.jpg" alt="">
+            <figcaption>57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img class="destination"src="image/figure13PRS.jpg" alt="choix de destination">
-            <figcaption class="destination">91€ Feel-good vibes intimate setting
+            <img class="destination"src="image/figure13PRS.resized.jpg" alt="choix de destination">
+            <img class="imgphone"src="image/figure13PRS.resized.jpg" alt="">
+            <figcaption>91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
     </section>
@@ -184,13 +193,14 @@
 
     <section>
         <form>
-          <h2 class="h2estimer">Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
-            <p>Complétez vos revenus en accueillant des voyageurs.</p>
-            <button class="bouttonestimer" type="button" name="Estimer mes revenus">Estimer mes revenus</button>
-        </form>
         <figure class="figestimer">
             <img class="imageestimer"src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
-        </figure>
+             <img class="imgphone"src="image/imageestimer.resized.jpg" alt="">
+           </figure>
+             <h2 class="h2estimer">Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
+             <p>Complétez vos revenus en accueillant des voyageurs.</p>
+             <button class="bouttonestimer" type="button" name="Estimer mes revenus">Estimer mes revenus</button>
+           </form>
     </section>
 
 
